@@ -1,24 +1,57 @@
-Build instructions
-=========================
+## Table of Contents
 
-The latest release of PS3 Media Server can be downloaded from:
+- [Build instructions](#build-instructions)
+- [Short instructions](#short-instructions)
+- [Full instructions](#full-instructions)
+	- [1. Download and install the Java JDK](#1-download-and-install-the-java-jdk)
+		- [Windows](#windows)
+		- [Linux](#linux)
+		- [Mac OS X](#mac-os-x)
+	- [2. Download and install Git](#2-download-and-install-git)
+		- [Windows](#windows-1)
+		- [Linux](#linux-1)
+		- [Mac OS X](#mac-os-x-1)
+	- [3. Download and extract Maven](#3-download-and-extract-maven)
+		- [Windows](#windows-2)
+		- [Linux](#linux-2)
+		- [Mac OS X](#mac-os-x-2)
+	- [4. Set environment variables](#4-set-environment-variables)
+		- [Windows](#windows-3)
+		- [Linux](#linux-3)
+		- [Mac OS X](#mac-os-x-3)
+	- [5. Download the PMS source code](#5-download-the-pms-source-code)
+	- [6. Resolve and install external libraries](#6-resolve-and-install-external-libraries)
+	- [7. Update to the latest source (optional)](#7-update-to-the-latest-source-optional)
+	- [8. Compile the latest version of PMS](#8-compile-the-latest-version-of-pms)
+	- [Automatic builds](#automatic-builds)
+		- [Windows](#windows-4)
+		- [Linux, Mac OS X &c.](#linux-mac-os-x-&c)
+- [Cross-compilation](#cross-compilation)
+	- [Building the Windows binaries](#building-the-windows-binaries)
+		- [On Linux](#on-linux)
+		- [On Mac OS X](#on-mac-os-x)
+	- [Building the Linux tarball](#building-the-linux-tarball)
+		- [On Windows](#on-windows)
+		- [On Mac OS X](#on-mac-os-x-1)
+	- [Building the Mac DMG file](#building-the-mac-dmg-file)
+- [Instructions for developers](#instructions-for-developers)
 
- - http://www.ps3mediaserver.org/
+# Build instructions
+
+The latest release of PS3 Media Server can be downloaded from: http://www.ps3mediaserver.org/
 
 This document describes how to build PS3 Media Server from the source files.
 The following software packages are required:
 
-  - The Java JDK (JRE is not enough)
-  - Git
-  - Maven
-  - External libraries
+* The Java JDK (the JRE is not enough)
+* Git
+* Maven
+* External libraries
 
-Read the section "Full instructions" for a complete explanation of how to
+Read the [Full instructions](#full-instructions) section for a complete explanation of how to
 install all required software and how to build PMS for each operating system.
 
-
-Short instructions
-------------------
+# Short instructions
 
 If all required software packages are installed, the following commands will
 download the latest sources and build PMS:
@@ -29,96 +62,134 @@ download the latest sources and build PMS:
 
 The result will be built in the "target" directory:
 
-    (Windows) PMS-setup.exe
-    (Linux)   pms-linux-generic-x.xx.x.tar.gz
-    (Mac OSX) pms-macosx-x.xx.x.dmg
+* Windows: `PMS-setup-full.exe`, `PMS-setup-full-x64.exe` and `PMS-setup-without-jre.exe`
+* Linux: `pms-linux-generic-x.xx.x.tar.gz`
+* Mac OS X: `pms-setup-macosx-x.xx.x.tar.gz`
 
-
-Full instructions
------------------
+# Full instructions
 
 First all required software has to be installed:
 
-1\. Download and install Java JDK (JRE is not enough):
+## 1. Download and install the Java JDK
 
-    * (Windows) http://www.oracle.com/technetwork/java/javase/downloads/index.html 
-        - Be sure to remember the install location. 
-    * (Linux)   `sudo apt-get install sun-java6-jdk`
-    * (Mac OSX) https://developer.apple.com/downloads/index.action?name=for%20Xcode%20-
-	- Look for java Developer Package
+Note: the JRE is not enough.
 
-2\. Download and install Git:
+### Windows
 
-    * (Windows) http://code.google.com/p/msysgit/downloads/list
-        - For the "Adjusting your PATH environment" section, select
-          "Run Git from the Windows Command Prompt".
-        - For the "Configuring the line ending conversions" section,
-          select "Checkout Windows-style, commit Unix-style line endings".
-    * (Linux)   `sudo apt-get install git-core git-gui git-doc`
-    * (Mac OSX) http://git-scm.com/
-	- If you are using brew (http://mxcl.github.com/homebrew/) you just have
-	  to do 'brew install git'
+See http://www.oracle.com/technetwork/java/javase/downloads/index.html
 
-3\. Download and extract Maven:
+Be sure to remember the install location.
 
-    * (Windows) http://maven.apache.org/download.html
-    * (Linux)   `sudo apt-get install maven3`
-    * (Mac OSX) (nothing to do, automatically installed with java for XCode in step 1)
+### Linux
 
-    Be sure to remember the extract location.
+    sudo apt-get install openjdk-7-jdk
 
-4\. Set environment variables (create new variables or append the value if the
-    variable already exists):
+### Mac OS X
 
-    * (Windows)
-        - Level: System, variable: "JAVA_HOME", value: JDK install location
-        - Level: User, variable "M2_HOME", value: Maven extract location
-        - Level: User, variable "M2", value: `%M2_HOME%\bin`
-        - Level: User, variable "Path", value `%M2%`
-    * (Linux) (nothing to do)
-    * (Mac OSX) (nothing to do)
+See https://developer.apple.com/downloads/index.action?name=for%20Xcode%20-
 
-5\. Download the PMS source code by cloning the GitHub repository:
+Look for the Java Developer Package.
 
-        git clone git://github.com/ps3mediaserver/ps3mediaserver.git
-        cd ps3mediaserver
+## 2. Download and install Git
 
-6\. Resolve and install external libraries needed by the build process:
+### Windows
 
-        mvn com.savage7.maven.plugins:maven-external-dependency-plugin:resolve-external
-        mvn com.savage7.maven.plugins:maven-external-dependency-plugin:install-external
+See http://code.google.com/p/msysgit/downloads/list
+
+For the "Adjusting your PATH environment" section,
+select "Run Git from the Windows Command Prompt".
+
+For the "Configuring the line ending conversions" section,
+select "Checkout Windows-style, commit Unix-style line endings".
+
+### Linux
+
+    sudo apt-get install git-core git-gui git-doc
+
+### Mac OS X
+
+See http://git-scm.com/
+
+If you are using brew (http://mxcl.github.com/homebrew/) you just have
+to do:
+
+    brew install git
+
+## 3. Download and extract Maven
+
+### Windows
+
+See http://maven.apache.org/download.html
+
+### Linux
+
+    sudo apt-get install maven3
+
+### Mac OS X
+
+Nothing to do, automatically installed with Java for XCode in step 1.
+
+Be sure to remember the extract location.
+
+## 4. Set environment variables
+
+### Windows
+
+Create new variables or append the value if the variable already exists:
+
+* Level: System, variable: `JAVA_HOME`, value: JDK install location
+* Level: User, variable `M2_HOME`, value: Maven extract location
+* Level: User, variable `M2`, value: `%M2_HOME%\bin`
+* Level: User, variable `PATH`, value `%M2%`
+
+### Linux
+
+Nothing to do.
+
+### Mac OS X
+
+Nothing to do.
+
+## 5. Download the PMS source code
+
+    git clone git://github.com/ps3mediaserver/ps3mediaserver.git
+    cd ps3mediaserver
+
+## 6. Resolve and install external libraries
+
+These are needed by the build process:
+
+    mvn com.savage7.maven.plugins:maven-external-dependency-plugin:resolve-external
+    mvn com.savage7.maven.plugins:maven-external-dependency-plugin:install-external
 
 At this point all required software packages are present.
 PMS is now ready to be built.
 
-7\. Update to the latest source (optional):
+## 7. Update to the latest source (optional)
 
-        git pull
+    git pull
 
-8\. Compile the latest version of PMS:
+## 8. Compile the latest version of PMS
 
-        mvn package
+    mvn package
 
 The resulting binaries will be built in the "target" directory:
 
-    (Windows) PMS-setup.exe
-    (Linux)   pms-linux-generic-x.xx.x.tar.gz
-    (Mac OSX) pms-macosx-x.xx.x.dmg
+* Windows: `PMS-setup-full.exe`, `PMS-setup-full-x64.exe` and `PMS-setup-without-jre.exe`
+* Linux:   `pms-linux-generic-x.xx.x.tar.gz`
+* Mac OS X: `pms-setup-macosx-x.xx.x.tar.gz`
 
+## Automatic builds
 
-Automatic builds
-----------------
+These last two commands can easily be automated using a script e.g.:
 
-These last two commands can easily be automated using a script:
-
-(Windows)
+### Windows
 
     rem build-pms.bat
     start /D ps3mediaserver /wait /b git pull
     start /D ps3mediaserver /wait /b mvn package
 
-
-(Linux, Mac OSX)
+### Linux, Mac OS X &c.
 
     #!/bin/sh
     # build-pms.sh
@@ -126,97 +197,72 @@ These last two commands can easily be automated using a script:
     git pull
     mvn package
 
+# Cross-compilation
 
-Instructions for developers
----------------------------
+By default, `mvn package` builds an installer or distibution file for the
+platform it is being compiled on e.g. `PMS-setup-full.exe` on Windows and a tarball on Linux.
 
-The previous sections described how to build the latest version of PMS from its
-sources. For most people this will be enough to keep up to date with the latest
-official developments. However, GitHub also makes it very simple for developers
-to fork their own version of the official PMS sources to add their own tweaks
-or features. GitHub facilitates submitting these features as "Pull Requests" to
-the official PMS development team.
+As an optional step, releases for other platforms can be built.
 
-This section describes how to set up your own fork and how to work with it from
-Eclipse (other IDEs should require similar configuration).
+## Building the Windows binaries
 
- * Create a GitHub account (https://github.com/).
+The Windows installers (`PMS-setup-full.exe`, `PMS-setup-full-x64.exe` and `PMS-setup-without-jre.exe`) and Windows executable
+(`PMS.exe`) can be built on non-Windows platforms.
 
- * Set up your machine for GitHub development (http://help.github.com/).
+First of all, you'll need to have the `makensis` binary installed. On Debian/Ubuntu,
+this can be done with:
 
- * Fix the Git line endings on your machine (http://help.github.com/line-endings/).
+    sudo apt-get install nsis
 
- * Go to the GitHub PMS repo (https://github.com/ps3mediaserver/ps3mediaserver)
-   and press the "Fork" button on the top right of the page to create your own
-   forked repository of the official sources. 
+Then the `NSISDIR` environment needs to be set to the **absolute path** to the
+`nsis` directory. This can either be set per-command:
 
- * Clone the new GitHub repo to your local machine. The clone URL can be seen
-   on the main page of your repository. It should be something like this
-   (replace YOURNAME with your actual GitHub name):
- 
-        git clone git@github.com:YOURNAME/ps3mediaserver.git YOURNAME
+    NSISDIR=$PWD/src/main/external-resources/third-party/nsis mvn ...
 
-You now have the new repository on your local machine. It is time to set up an
-integrated development environment to work with it. The steps below explain how
-to set up Eclipse for development with Maven and Git. 
+\- temporarily in the current shell:
 
- * Download and install the Eclipse IDE for Java Developers (http://www.eclipse.org/downloads/).
+    export NSISDIR=$PWD/src/main/external-resources/third-party/nsis
+    mvn ...
 
- * Install the m2e Eclipse plugin (http://eclipse.org/m2e/)
+\- or permanently:
 
- * Install the EGit Eclipse plugin (http://eclipse.org/egit/)
+    # these two commands only need to be run once
+    echo "export NSISDIR=$PWD/src/main/external-resources/third-party/nsis" >> ~/.bashrc
+    source ~/.bashrc
 
- * In Eclipse, select the menu "Window > Show View > Git Repositories". Then
-   select "Window > Navigation > Show View Menu", choose "Add a Repository".
-   Browse for the directory where you cloned your repository and press the
-   "Search" button. Select your forked repository and press "OK".
-   The repository should appear in the Git Repositories view.
- 
- * Press the right mouse button on the repository and select "Import Maven
-   Projects" from the menu. Select the project "/pom.xml" and press "Finish".
+    mvn...
 
-   Note: if a project with the same name already exists, click "Advanced" and
-   set the "Name template" to `[artifactId]-YOURNAME` (replace YOURNAME with
-   your GitHub name). Then press "Finish".
+For the sake of brevity, the following examples assume it has already been set.
 
-You now see the sources in Eclipse, but the project is still missing the "Git"
-nature. In other words, it is not tied to the local repository yet. This means
-you cannot perform any Git actions from Eclipse yet. Add the missing connection
-by sharing the project:
+The Windows installer can now be built with one of the following commands:
 
- * Press the right mouse button on the newly created project and select the
-   menu "Team > Share Project...". Select "Git" and press "Next >".
-   Check the checkbox "Use or create repository in parent folder of project"
-   and make sure the project is selected. Then press "Finish".
+### On Linux
 
-Verify that your project is now under Git control. Press the right mouse
-button on the project and under "Team" you now see all options to work with
-Git.
+    mvn package -P system-makensis,windows
 
-You can build PMS from Eclipse:
+### On Mac OS X
 
- * Create a new run configuration under "Run > Run Configurations...", right
-   mouse button on "Maven Build", select "New", Name: `Build PMS`, Goals:
-   `package`. Select the tab "JRE" and add the following VM arguments
-   `-Xmx1500m -XX:MaxPermSize=256m`. Finally, press the "Apply" button.
+    mvn package -P system-makensis,windows,-osx
 
-You will want to run PMS from Eclipse while developing. This is how you do it:
+## Building the Linux tarball
 
- * Create a new run configuration under "Run > Run Configurations...", right
-   mouse button on "Maven Build", select "New", Name: `Run PMS`, Base
-   directory: `${project_loc}`, Goals: "test", Profiles: `run-from-eclipse`.
-   Select the tab "JRE" and add VM arguments `-Xmx1500m -XX:MaxPermSize=256m`.
-   Finally, press the "Apply" button.
+### On Windows
 
-You are now ready to start developing!
+    mvn package -P linux,-windows
 
-When you are happy with your changes, you can commit them to your local
-repository from Eclipse using right mouse button, "Team > Commit...".
+### On Mac OS X
 
-When you are satisfied with your commits and want to publish them to your
-repository at GitHub, you can press the right mouse button on the project and
-select "Team > Push to Upstream".
+    mvn package -P linux,-osx
 
-If you would like to contribute to the PMS project, you can send a "Pull
-Request" to the development team. See the help on GitHub for more details
-(http://help.github.com/send-pull-requests/).
+## Building the Mac OSX installer tarball
+
+The Mac OSX installer tarball can be built on any platform by specifying
+the "osx" profile explicity:
+
+    mvn package -P osx
+
+# Instructions for developers
+
+Now that you have a build environment set up, you can start hacking on
+PMS. Instructions and tips for developing/patching PMS can be found
+[here](https://github.com/ps3mediaserver/ps3mediaserver/blob/master/DEVELOP.md).
